--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,8 +6,8 @@ $font-color-one: #ffffff;
 $font-color-two: #2c2c54;
 $font-family-one: 'Signika', sans-serif;
 $font-family-two: 'Roboto Slab', serif;
-$transition: all 1s; /*Global*/
-
+$transition: all 1s;
+/*Global*/
 *,
 *::after,
 *::before {
@@ -64,6 +64,7 @@ section {
     font-weight: 400px;
 }
 /*Navigation*/
+
 .navigation {
     background-color: $color-one;
     padding: 12px 0;
@@ -122,7 +123,6 @@ section {
     padding: 0 24px;
 }
 /*Header*/
-
 header {
     background-color: $color-one;
     color: white;
@@ -162,7 +162,6 @@ header {
     background-image: linear-gradient(45deg, #ffffff 50%, transparent 70%);
 }
 /*Flexbox1*/
-
 .flex-grand-parent {
     display: flex;
     color: black;
@@ -230,6 +229,7 @@ header {
     }
 }
 /*Flexbox2*/
+
 .flex-parent2 {
     flex: 0 0 50%;
     position: relative;
@@ -240,28 +240,27 @@ header {
 
 .work-image {
     position: absolute;
-    width: 50%;
+    //width: 100%;
     height: 100%;
     overflow: hidden;
 
     &::after {
-        top:40px;
+        top: 40px;
         max-width: 250px;
-        right: 25px;
+        right: 25%;
         display: block;
         content: "";
         height: 90%;
         width: 100%;
         position: absolute;
         opacity: 0.3;
-
         background-color: green;
-        //transform: translate (200px 10px);
     }
+}
 
-    & :hover {
-        transform: none;
-    }
+.work-image:hover::after {
+    top: 20px;
+    left: 0;
 }
 
 .work-image img {
@@ -300,7 +299,6 @@ header {
     }
 }
 /*Contact*/
-
 .contact {
     background-color: $color-one;
     padding-bottom: 96px;
@@ -337,7 +335,6 @@ header {
     color: white;
 }
 /*Footer*/
-
 .social ul {
     display: flex;
     justify-content: center;
@@ -368,9 +365,10 @@ header {
     transition: all 0.5s;
 }
 /*Media*/
-@media (max-width: 767px) {
+@media (max-width: 1000px) {
     .flex-grand-parent,
     .flex-parent2 {
+
         flex-direction: column;
     }
 
@@ -381,6 +379,11 @@ header {
 
     .work-image {
         height: inherit;
+    }
+
+    .work-description {
+        padding: 120px 0;
+        max-width: 300px;
     }
 
     .contact-data {
