Element after almost..almost

--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,8 @@ header {
 .flex-parent2 {
   -ms-flex: 0 0 50%;
       flex: 0 0 50%;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   -ms-flex-direction: row;
       flex-direction: row;
@@ -242,16 +244,15 @@ header {
 .work-image {
   position: absolute;
   height: 100%;
-  overflow: hidden;
 }
 
 .work-image::after {
-  top: 40px;
-  max-width: 250px;
-  right: 25%;
+  top: 20px;
+  right: 20px;
+  width: 100%;
   display: block;
   content: "";
-  height: 90%;
+  height: 100%;
   width: 100%;
   position: absolute;
   opacity: 0.3;
@@ -259,7 +260,7 @@ header {
 }
 
 .work-image:hover::after {
-  top: 20px;
+  top: 0;
   left: 0;
 }
 
@@ -269,7 +270,6 @@ header {
   -o-object-fit: cover;
      object-fit: cover;
   transtion: all 1s;
-  padding: 20px 0;
 }
 
 .work-description {
@@ -385,13 +385,13 @@ header {
   }
   .work-image img {
     max-width: 100%;
-    height: 150px;
+    height: 200px;
   }
   .work-image {
     height: inherit;
   }
   .work-description {
-    padding: 120px 0;
+    padding: 180px 0;
     max-width: 300px;
   }
   .contact-data {
