--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,8 +6,8 @@ $font-color-one: #ffffff;
 $font-color-two: #2c2c54;
 $font-family-one: 'Signika', sans-serif;
 $font-family-two: 'Roboto Slab', serif;
-$transition: all 1s;
-/*Global*/
+$transition: all 1s; /*Global*/
+
 *,
 *::after,
 *::before {
@@ -64,7 +64,6 @@ section {
     font-weight: 400px;
 }
 /*Navigation*/
-
 .navigation {
     background-color: $color-one;
     padding: 12px 0;
@@ -123,6 +122,7 @@ section {
     padding: 0 24px;
 }
 /*Header*/
+
 header {
     background-color: $color-one;
     color: white;
@@ -162,6 +162,7 @@ header {
     background-image: linear-gradient(45deg, #ffffff 50%, transparent 70%);
 }
 /*Flexbox1*/
+
 .flex-grand-parent {
     display: flex;
     color: black;
@@ -187,6 +188,12 @@ header {
     position: relative;
     margin: 0 10px;
     text-align: left;
+    padding-bottom: 80px;
+
+    & .btn {
+        position: absolute;
+        bottom: 0;
+    }
 
     .floating-number {
         line-height: 1;
@@ -229,7 +236,6 @@ header {
     }
 }
 /*Flexbox2*/
-
 .flex-parent2 {
     flex: 0 0 50%;
     display: flex;
@@ -247,6 +253,7 @@ header {
         top: 20px;
         right: 20px;
         width: 100%;
+        //max-width: 250px;
         display: block;
         content: "";
         height: 100%;
@@ -257,23 +264,23 @@ header {
     }
 }
 
-.work-image:hover::after {
+.work-image:hover:after {
     top: 0;
     left: 0;
 }
 
 .work-image img {
-    max-width: 250px;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transtion: all 1s;
-    //padding: 20px 0;
 }
 
 .work-description {
-    padding: 36px 0 36px 50%;
+    padding: 36px 0 36px 45%;
     margin: 0 10px;
     text-align: left;
+    position: absolute;
 
     & .services-title {
         font-size: 30px;
@@ -298,6 +305,7 @@ header {
     }
 }
 /*Contact*/
+
 .contact {
     background-color: $color-one;
     padding-bottom: 96px;
@@ -334,6 +342,7 @@ header {
     color: white;
 }
 /*Footer*/
+
 .social ul {
     display: flex;
     justify-content: center;
@@ -367,8 +376,15 @@ header {
 @media (max-width: 1000px) {
     .flex-grand-parent,
     .flex-parent2 {
-
         flex-direction: column;
+    }
+
+    .flex-parent {
+        padding-bottom: 0;
+
+        & .btn {
+            position: static;
+        }
     }
 
     .work-image img {
@@ -379,8 +395,9 @@ header {
     .work-image {
         height: inherit;
 
-        &::after{
-
+        &::after {
+            top: 10px;
+            right: 10px;
         }
     }
 
