--- a/sass/style.scss
+++ b/sass/style.scss
@@ -246,18 +246,18 @@ header {
 }
 
 .work-image {
-    position: absolute;
     height: 100%;
+    width: 100%;
+    max-width: 250px;
+    position: relative;
 
     &::after {
         top: 20px;
         right: 20px;
-        width: 100%;
-        //max-width: 250px;
         display: block;
         content: "";
         height: 100%;
-        width: 100%;
+        width:100%;
         position: absolute;
         opacity: 0.3;
         background-color: green;
@@ -266,21 +266,21 @@ header {
 
 .work-image:hover:after {
     top: 0;
-    left: 0;
+    right: 0;
 }
 
 .work-image img {
     width: 100%;
     height: 100%;
+
     object-fit: cover;
     transtion: all 1s;
 }
 
 .work-description {
-    padding: 36px 0 36px 45%;
+    padding: 36px 0 36px;
     margin: 0 10px;
     text-align: left;
-    position: absolute;
 
     & .services-title {
         font-size: 30px;
@@ -402,8 +402,8 @@ header {
     }
 
     .work-description {
-        padding: 180px 0;
-        max-width: 300px;
+        margin: 0 -10px;
+        max-width: 290px;
     }
 
     .contact-data {
