--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,8 +6,8 @@ $font-color-one: #ffffff;
 $font-color-two: #2c2c54;
 $font-family-one: 'Signika', sans-serif;
 $font-family-two: 'Roboto Slab', serif;
-$transition: all 1s; /*Global*/
-
+$transition: all 1s;
+/*Global*/
 *,
 *::after,
 *::before {
@@ -64,6 +64,7 @@ section {
     font-weight: 400px;
 }
 /*Navigation*/
+
 .navigation {
     background-color: $color-one;
     padding: 12px 0;
@@ -122,7 +123,6 @@ section {
     padding: 0 24px;
 }
 /*Header*/
-
 header {
     background-color: $color-one;
     color: white;
@@ -162,7 +162,6 @@ header {
     background-image: linear-gradient(45deg, #ffffff 50%, transparent 70%);
 }
 /*Flexbox1*/
-
 .flex-grand-parent {
     display: flex;
     color: black;
@@ -236,6 +235,7 @@ header {
     }
 }
 /*Flexbox2*/
+
 .flex-parent2 {
     flex: 0 0 50%;
     display: flex;
@@ -257,7 +257,7 @@ header {
         display: block;
         content: "";
         height: 100%;
-        width:100%;
+        width: 100%;
         position: absolute;
         opacity: 0.3;
         background-color: green;
@@ -272,13 +272,12 @@ header {
 .work-image img {
     width: 100%;
     height: 100%;
-
     object-fit: cover;
     transtion: all 1s;
 }
 
 .work-description {
-    padding: 36px 0 36px;
+    padding: 36px 0;
     margin: 0 10px;
     text-align: left;
 
@@ -305,7 +304,6 @@ header {
     }
 }
 /*Contact*/
-
 .contact {
     background-color: $color-one;
     padding-bottom: 96px;
@@ -342,7 +340,6 @@ header {
     color: white;
 }
 /*Footer*/
-
 .social ul {
     display: flex;
     justify-content: center;
